--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,8 @@
                        tabindex="-1"
                        aria-disabled="true">Characters</a>
                 </li>
+                <button class="btn btn-outline-dark ml-4"
+                        (click)="logoutUser()">Logout</button>
             </ul>
         </div>
     </div>
