--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -23,15 +23,18 @@
                                            class="form-control"
                                            formControlName="name"
                                            [ngClass]="{'is-invalid':isValidInput('name')}">
-                                </div>
-                                <div class="invalid-feedback">
-                                    <span *ngIf="registerForm.get('name')?.errors?.required">
-                                        Your name is required
-                                    </span>
-                                    <span *ngIf="registerForm.get('name')?.errors?.minlength">
-                                        Minimum {{registerForm.get('name')?.errors?.minlength.requiredLength}}
-                                        characters required
-                                    </span>
+                                    <div class="invalid-feedback">
+                                        <span *ngIf="registerForm.get('name')?.errors?.required">
+                                            Your name is required
+                                        </span>
+                                        <span *ngIf="registerForm.get('name')?.errors?.minlength">
+                                            Minimum {{registerForm.get('name')?.errors?.minlength.requiredLength}}
+                                            characters required
+                                        </span>
+                                        <span *ngIf="registerForm.get('name')?.errors?.pattern">
+                                            Only letters are allowed
+                                        </span>
+                                    </div>
                                 </div>
                                 <div class="form-group col-6">
                                     <label>Last name</label>
@@ -40,15 +43,18 @@
                                            class="form-control"
                                            formControlName="lastName"
                                            [ngClass]="{'is-invalid':isValidInput('lastName')}">
-                                </div>
-                                <div class="invalid-feedback">
-                                    <span *ngIf="registerForm.get('lastName')?.errors?.required">
-                                        Your last name is required
-                                    </span>
-                                    <span *ngIf="registerForm.get('lastName')?.errors?.minlength">
-                                        Minimum {{registerForm.get('lastName')?.errors?.minlength.requiredLength}}
-                                        characters required
-                                    </span>
+                                    <div class="invalid-feedback">
+                                        <span *ngIf="registerForm.get('lastName')?.errors?.required">
+                                            Your last name is required
+                                        </span>
+                                        <span *ngIf="registerForm.get('lastName')?.errors?.minlength">
+                                            Minimum {{registerForm.get('lastName')?.errors?.minlength.requiredLength}}
+                                            characters required
+                                        </span>
+                                        <span *ngIf="registerForm.get('lastName')?.errors?.pattern">
+                                            Only letters are allowed
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -58,14 +64,14 @@
                                        class="form-control"
                                        formControlName="email"
                                        [ngClass]="{'is-invalid':isValidInput('email')}">
-                            </div>
-                            <div class="invalid-feedback">
-                                <span *ngIf="registerForm.get('email')?.errors?.required">
-                                    Your email is required
-                                </span>
-                                <span *ngIf="registerForm.get('inputEmail')?.errors?.pattern">
-                                    Email format is invalid
-                                </span>
+                                <div class="invalid-feedback">
+                                    <span *ngIf="registerForm.get('email')?.errors?.required">
+                                        Your email is required
+                                    </span>
+                                    <span *ngIf="registerForm.get('email')?.errors?.pattern">
+                                        Email format is invalid
+                                    </span>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label>Password</label>
@@ -74,14 +80,15 @@
                                        class="form-control"
                                        formControlName="password"
                                        [ngClass]="{'is-invalid':isValidInput('password')}">
-                            </div>
-                            <div class="invalid-feedback">
-                                <span *ngIf="registerForm.get('password')?.errors?.required">
-                                    Password is required
-                                </span>
-                                <span *ngIf="registerForm.get('password')?.errors?.checkPassStrength">
-                                    {{registerForm.get('password').errors.checkPassStrength}}
-                                </span>
+                                <div class="invalid-feedback">
+                                    <span *ngIf="registerForm.get('password')?.errors?.required">
+                                        Password is required
+                                    </span>
+                                    <span *ngIf="registerForm.get('password')?.errors?.pattern">
+                                        Requires 6 characters minimum with at least one uppercase, one lowercase and a
+                                        number.
+                                    </span>
+                                </div>
                             </div>
                             <button type="submit"
                                     class="btn btn-secondary float-right mt-3"
