--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,5 @@
 <app-navbar></app-navbar>
-<p>home works!</p>
-<!-- <div *ngIf="users">
-    <div *ngFor="let user of users">
-        <p>User: {{user.username}}</p>
-        <p>Register: {{user.active}}</p>
-    </div>
-</div>
-
-<div *ngIf="!users">
-    You are not an user!
-</div> -->
+<section>
+    <h5 class="text-center font-weight-bold mt-5">Welcome {{user.username}}!</h5>
+</section>
+<app-starships-list></app-starships-list>
