--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,97 +5,7 @@
         </div>
         <div class="col-6 bg-info">
             <div class="card m-5">
-                <div class="card-body">
-                    <div class="text-center mt-3">
-                        <h2 class="card-title font-weight-bold">Join the force!</h2>
-                        <a [routerLink]="['/login']"
-                           class="card-link">Already a member? Log in!</a>
-                    </div>
-                    <div class="register-form mt-5">
-                        <form class="needs-validate"
-                              novalidate
-                              [formGroup]="registerForm"
-                              (ngSubmit)="onSubmit()">
-                            <div class="form-row">
-                                <div class="form-group col-6">
-                                    <label>First name</label>
-                                    <input type="text"
-                                           class="form-control"
-                                           formControlName="name"
-                                           [ngClass]="{'is-invalid':isValidInput('name')}">
-                                    <div class="invalid-feedback">
-                                        <span *ngIf="registerForm.get('name')?.errors?.required">
-                                            Your name is required
-                                        </span>
-                                        <span *ngIf="registerForm.get('name')?.errors?.minlength">
-                                            Minimum {{registerForm.get('name')?.errors?.minlength.requiredLength}}
-                                            characters required
-                                        </span>
-                                        <span *ngIf="registerForm.get('name')?.errors?.pattern">
-                                            Only letters are allowed
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="form-group col-6">
-                                    <label>Last name</label>
-                                    <input type="text"
-                                           id="id_lastName"
-                                           class="form-control"
-                                           formControlName="lastName"
-                                           [ngClass]="{'is-invalid':isValidInput('lastName')}">
-                                    <div class="invalid-feedback">
-                                        <span *ngIf="registerForm.get('lastName')?.errors?.required">
-                                            Your last name is required
-                                        </span>
-                                        <span *ngIf="registerForm.get('lastName')?.errors?.minlength">
-                                            Minimum {{registerForm.get('lastName')?.errors?.minlength.requiredLength}}
-                                            characters required
-                                        </span>
-                                        <span *ngIf="registerForm.get('lastName')?.errors?.pattern">
-                                            Only letters are allowed
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label>E-mail</label>
-                                <input type="text"
-                                       id="id_email"
-                                       class="form-control"
-                                       formControlName="email"
-                                       [ngClass]="{'is-invalid':isValidInput('email')}">
-                                <div class="invalid-feedback">
-                                    <span *ngIf="registerForm.get('email')?.errors?.required">
-                                        Your email is required
-                                    </span>
-                                    <span *ngIf="registerForm.get('email')?.errors?.pattern">
-                                        Email format is invalid
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input type="password"
-                                       id="id_pass"
-                                       class="form-control"
-                                       formControlName="password"
-                                       [ngClass]="{'is-invalid':isValidInput('password')}">
-                                <div class="invalid-feedback">
-                                    <span *ngIf="registerForm.get('password')?.errors?.required">
-                                        Password is required
-                                    </span>
-                                    <span *ngIf="registerForm.get('password')?.errors?.pattern">
-                                        Requires 4 characters minimum with at least one uppercase, one lowercase and a
-                                        number.
-                                    </span>
-                                </div>
-                            </div>
-                            <button type="submit"
-                                    class="btn btn-secondary float-right mt-3"
-                                    [disabled]="registerForm.invalid">Register</button>
-                        </form>
-                    </div>
-                </div>
+                <router-outlet></router-outlet>
             </div>
         </div>
     </div>
