--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,49 @@
-<p>login works!</p>
+<div class="card-body">
+    <div class="text-center mt-3">
+        <h2 class="card-title font-weight-bold">Log in</h2>
+        <a [routerLink]="['/landing/register']"
+           class="card-link">Not a member yet? Register!</a>
+    </div>
+    <div class="register-form mt-5">
+        <form class="needs-validate"
+              novalidate
+              [formGroup]="loginForm"
+              (ngSubmit)="onLogin()">
+            <div class="form-group">
+                <label>E-mail</label>
+                <input type="text"
+                       class="form-control"
+                       formControlName="email"
+                       [ngClass]="{'is-invalid':isValidInput('email')}">
+                <div class="invalid-feedback">
+                    <span *ngIf="loginForm.get('email')?.errors?.required">
+                        Your email is required
+                    </span>
+                    <span *ngIf="loginForm.get('email')?.errors?.pattern">
+                        Email format is invalid
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password"
+                       class="form-control"
+                       formControlName="password"
+                       [ngClass]="{'is-invalid':isValidInput('password')}">
+                <div class="invalid-feedback">
+                    <span *ngIf="loginForm.get('password')?.errors?.required">
+                        Password is required
+                    </span>
+                    <span *ngIf="loginForm.get('password')?.errors?.pattern">
+                        Requires 4 characters minimum with at least one uppercase, one lowercase and
+                        a
+                        number.
+                    </span>
+                </div>
+            </div>
+            <button type="submit"
+                    class="btn btn-secondary float-right my-3"
+                    [disabled]="loginForm.invalid">Enter</button>
+        </form>
+    </div>
+</div>
