improve landing css and files organization

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <app-navbar></app-navbar>
-<section>
-    <h5 class="text-center font-weight-bold mt-5">Welcome {{user.username}}!</h5>
-</section>
-<app-starships-list></app-starships-list>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
