--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="text-center mt-3">
         <h2 class="card-title font-weight-bold">Log in</h2>
         <a [routerLink]="['/landing/register']"
-           class="card-link">Not a member yet? Register!</a>
+           class="card-link text-orange">Not a member yet? Register!</a>
     </div>
     <div class="register-form mt-5">
         <form class="needs-validate"
