--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand"
-           [routerLink]="['/home']">
+           [routerLink]="['/home/welcome']">
             <img src="https://e7.pngegg.com/pngimages/191/778/png-clipart-logo-star-wars-brand-star-wars-logo-text-logo.png"
                  height="30"
                  alt="">
@@ -20,11 +20,11 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link"
-                       [routerLink]="['/starships']">Starships</a>
+                       [routerLink]="['/home/starships']">Starships</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled"
-                       [routerLink]="['/characters']"
+                       [routerLink]="['/home/characters']"
                        tabindex="-1"
                        aria-disabled="true">Characters</a>
                 </li>
