--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="text-center mt-3">
         <h2 class="card-title font-weight-bold">Join the force!</h2>
         <a [routerLink]="['/landing/login']"
-           class="card-link">Already a member? Log in!</a>
+           class="card-link text-orange">Already a member? Log in!</a>
     </div>
     <div class="register-form mt-5">
         <form class="needs-validate"
