--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,13 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-6 bg-dark">
-
+            <div class="text-center">
+                <img src="../../assets/bb8.png"
+                     class="mt-5">
+            </div>
         </div>
-        <div class="col-6 bg-info">
-            <div class="card m-5">
+        <div class="col-6 bg-orange">
+            <div class="card m-5 shadow-lg">
                 <router-outlet></router-outlet>
             </div>
         </div>
