add some responsive and css styles

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,12 +1,18 @@
-<div class="container mt-5">
+<div class="container">
     <div class="row">
-        <div class="col-6 bg-dark">
+        <div class="mx-auto">
+            <img src="../../assets/logo.png"
+                 class="w-75 img-fluid">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6 bg-dark">
             <div class="text-center">
                 <img src="../../assets/bb8.png"
                      class="mt-5">
             </div>
         </div>
-        <div class="col-6 bg-orange">
+        <div class="col-12 col-md-6 bg-orange">
             <div class="card m-5 shadow-lg">
                 <router-outlet></router-outlet>
             </div>
