--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand"
            [routerLink]="['/home/welcome']">
-            <img src="https://e7.pngegg.com/pngimages/191/778/png-clipart-logo-star-wars-brand-star-wars-logo-text-logo.png"
-                 height="30"
-                 alt="">
+            <img src="../../assets/nav-logo.png"
+                 height="35">
         </a>
         <button class="navbar-toggler"
                 type="button"
@@ -28,7 +27,7 @@
                        tabindex="-1"
                        aria-disabled="true">Characters</a>
                 </li>
-                <button class="btn btn-outline-dark ml-4"
+                <button class="btn btn-outline-light ml-4"
                         (click)="logoutUser()">Logout</button>
             </ul>
         </div>
