--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <section>
-    <h3 class="text-center font-weight-bold mt-5">Welcome {{user.username}}!</h3>
+    <h3 class="text-center text-light font-weight-bold mt-5">Welcome {{user.username}}!</h3>
     <div class="text-center mt-5">
-        <img src="../../assets/leia.png">
+        <img class="img-fluid"
+             src="../../assets/c3po.png">
     </div>
 </section>
