add pagination, router navigate and improve validators

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,9 +23,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled"
-                       [routerLink]="['/home/characters']"
+                       [routerLink]="['/home/people']"
                        tabindex="-1"
-                       aria-disabled="true">Characters</a>
+                       aria-disabled="true">People</a>
                 </li>
                 <button class="btn btn-outline-light ml-4"
                         (click)="logoutUser()">Logout</button>
