--- a/src/app/starships-list/starships-list.component.html
+++ b/src/app/starships-list/starships-list.component.html
@@ -1,16 +1,33 @@
 <section>
     <h3 class="text-center text-light font-weight-bold my-5">All the starships</h3>
+    <p class="text-center text-light font-weight-bold">Starships: {{numStarships}}</p>
+    <p class="text-center text-light font-weight-bold">Current page: {{currentPage}}</p>
+    <div class="text-center my-4">
+        <button class="btn btn-sm btn-outline-light mx-2"
+                (click)="onChangePage(false)"
+                [disabled]="currentPage === 1">Previous</button>
+        <button class="btn btn-sm btn-outline-light mx-2"
+                (click)="onChangePage(true)"
+                [disabled]="currentPage === 4">Next</button>
+    </div>
     <div class="table-responsive-md">
         <table class="table table-striped table-bordered table-dark">
             <thead>
                 <tr class="text-warning">
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Model</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Starship class</th>
-                    <th scope="col">Crew</th>
-                    <th scope="col">Passengers</th>
+                    <th scope="col"
+                        class="align-middle">Name</th>
+                    <th scope="col"
+                        class="align-middle">#</th>
+                    <th scope="col"
+                        class="align-middle">Model</th>
+                    <th scope="col"
+                        class="align-middle">Manufacturer</th>
+                    <th scope="col"
+                        class="align-middle">Starship class</th>
+                    <th scope="col"
+                        class="align-middle">Crew</th>
+                    <th scope="col"
+                        class="align-middle">Passengers</th>
                 </tr>
             </thead>
             <tbody>
